--- a/app/src/main/res/layout/game_table_seat_east.xml
+++ b/app/src/main/res/layout/game_table_seat_east.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/ivTableSeatEastSeatWindIcon"
         android:layout_centerHorizontal="true"
-        android:paddingBottom="@dimen/standard_margin"
+        android:paddingBottom="@dimen/half_standard_margin"
         android:textSize="@dimen/table_player_points_text_size"
         tools:text="-000" />
 
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/tvTableSeatEastPoints"
         android:layout_marginLeft="@dimen/half_standard_margin"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="12dp"
         android:layout_toRightOf="@+id/tvTableSeatEastPoints"
         android:textSize="@dimen/table_player_penalty_points_text_size"
         android:textStyle="normal"
