--- a/app/src/main/res/drawable/button_rounded_corners_purple.xml
+++ b/app/src/main/res/drawable/button_rounded_corners_purple.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient
-        android:startColor="@color/purpleDark"
-        android:centerColor="@color/purplePenalty"
-        android:endColor="@color/purpleDark"
-        android:angle="90" />
-    <corners android:radius="@dimen/standard_margin" />
+    <solid android:color="@color/purplePenalty" />
+    <corners android:radius="@dimen/quarter_standard_margin" />
 </shape>
