--- a/app/src/main/res/layout/hand_actions_dialog_fragment.xml
+++ b/app/src/main/res/layout/hand_actions_dialog_fragment.xml
@@ -4,12 +4,13 @@
     style="@style/AlertDialogStyleMM"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="@dimen/standard_margin"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="3"
         android:orientation="horizontal">
 
         <Button
@@ -17,13 +18,11 @@
             style="@android:style/Widget.Material.Button.Colored"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/standard_margin"
             android:layout_weight="1"
             android:background="@drawable/button_rounded_corners_purple_dark"
             android:elevation="@dimen/half_standard_margin"
             android:text="@string/cancel_penalty"
             android:textSize="24sp"
-            android:textStyle="bold"
             android:visibility="gone"
             tools:targetApi="m"
             tools:visibility="visible"
@@ -34,13 +33,12 @@
             style="@android:style/Widget.Material.Button.Colored"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/standard_margin"
+            android:layout_marginStart="@dimen/standard_margin"
             android:layout_weight="1"
             android:background="@drawable/button_rounded_corners_purple"
             android:elevation="@dimen/half_standard_margin"
             android:text="@string/penalty"
             android:textSize="30sp"
-            android:textStyle="bold"
             tools:targetApi="m" />
 
     </LinearLayout>
@@ -50,7 +48,7 @@
         style="@android:style/Widget.Material.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="@dimen/standard_margin"
+        android:layout_marginTop="@dimen/standard_margin"
         android:layout_weight="4"
         android:background="@drawable/button_rounded_corners_green"
         android:elevation="@dimen/half_standard_margin"
@@ -64,13 +62,13 @@
         style="@android:style/Widget.Material.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="@dimen/standard_margin"
-        android:layout_weight="2"
+        android:layout_marginTop="@dimen/standard_margin"
+        android:layout_weight="3"
         android:background="@drawable/button_rounded_corners_gray"
         android:elevation="@dimen/half_standard_margin"
         android:text="@string/draw"
-        android:textSize="36sp"
         android:textStyle="bold"
+        android:textSize="36sp"
         tools:targetApi="m" />
 
 </LinearLayout>
