--- a/app/src/main/res/layout/main_oldgames_fragment.xml
+++ b/app/src/main/res/layout/main_oldgames_fragment.xml
@@ -112,4 +112,21 @@
         android:layout_margin="@dimen/double_standard_margin"
         android:src="@drawable/ic_play_arrow_white_24px"/>
 
+    <LinearLayout
+        android:id="@+id/llOldGamesProgress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:gravity="end|bottom"
+        android:focusable="true"
+        android:visibility="gone"
+        tools:visibility="visible">
+
+        <ProgressBar
+            android:layout_margin="@dimen/double_standard_margin"
+            android:layout_width="24dp"
+            android:layout_height="24dp" />
+
+    </LinearLayout>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
