--- a/app/src/main/res/layout/game_hand_actions_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_hand_actions_dialog_fragment.xml
@@ -1,27 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/AlertDialogStyleMM"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="@dimen/standard_margin">
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/btHandActionsDialogPenalty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:icon="@drawable/ic_penalty_white"
+        style="@style/Widget.MaterialComponents.Button.Icon"
         android:text="@string/penalty" />
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/btHandActionsDialogHu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:icon="@drawable/ic_trophy_white_18dp"
+        style="@style/Widget.MaterialComponents.Button.Icon"
         android:text="@string/hu" />
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/btHandActionsDialogDraw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:icon="@drawable/ic_add_white_24dp"
+        style="@style/Widget.MaterialComponents.Button.Icon"
         android:text="@string/draw" />
 
 </LinearLayout>
