--- a/app/src/main/res/layout/game_points_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_points_dialog_fragment.xml
@@ -14,8 +14,7 @@
         android:text="@string/select_discarder"
         android:layout_gravity="start"
         android:textColor="@color/grayMM"
-        android:textStyle="bold"
-        />
+        android:textStyle="bold" />
 
     <com.etologic.mahjongscoring2.app.custom_views.CustomDiscarderSelector
         android:id="@+id/cdsPointsDialog"
