--- a/app/src/main/res/layout/custom_num_pad.xml
+++ b/app/src/main/res/layout/custom_num_pad.xml
@@ -1,159 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/llNumPadContainer"
     android:layout_width="wrap_content"
-    android:id="@+id/tlNumPadContainer"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
+    android:gravity="center"
+    android:orientation="vertical"
     android:padding="@dimen/standard_margin">
 
-    <TableRow
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/etCustomNumPadDisplay"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/quarter_standard_margin"
+        android:background="@drawable/outlined_rounded_corners_gray"
+        android:clickable="false"
+        android:enabled="false"
+        android:focusable="false"
         android:gravity="center"
-        android:padding="@dimen/standard_margin">
+        android:hint="@string/points"
+        android:importantForAutofill="no"
+        android:inputType="none"
+        android:lines="1"
+        android:maxLength="4"
+        android:textColor="@color/grayMM"
+        android:textColorHint="@color/grayLight"
+        android:textIsSelectable="false"
+        android:textSize="40sp"
+        android:textStyle="bold" />
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="1dp" />
-
-        <TextView
-            android:id="@+id/tvCustomNumPadDisplay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:hint="@string/points"
-            android:maxLength="4"
-            android:maxLines="1"
-            android:textColor="@color/colorAccent"
-            android:textColorHint="@color/colorAccent"
-            android:alpha=".3"
-            android:textSize="48sp"
-            android:textStyle="bold" />
-
-        <View
-            android:layout_width="1dp"
-            android:layout_height="1dp" />
-
-    </TableRow>
-
-    <TableRow
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal">
+        android:layout_marginTop="@dimen/half_standard_margin"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/btCustomNumPad1"
             style="@style/buttonNumPad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/one" />
 
         <Button
             android:id="@+id/btCustomNumPad2"
             style="@style/buttonNumPad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/two" />
 
         <Button
             android:id="@+id/btCustomNumPad3"
             style="@style/buttonNumPad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/three" />
 
-    </TableRow>
+    </LinearLayout>
 
-
-    <TableRow
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/half_standard_margin"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/btCustomNumPad4"
             style="@style/buttonNumPad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/four" />
 
         <Button
             android:id="@+id/btCustomNumPad5"
             style="@style/buttonNumPad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/five" />
 
         <Button
             android:id="@+id/btCustomNumPad6"
             style="@style/buttonNumPad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/six" />
 
-    </TableRow>
+    </LinearLayout>
 
-
-    <TableRow
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/half_standard_margin"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/btCustomNumPad7"
             style="@style/buttonNumPad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/seven" />
 
         <Button
             android:id="@+id/btCustomNumPad8"
             style="@style/buttonNumPad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/eight" />
 
         <Button
             android:id="@+id/btCustomNumPad9"
             style="@style/buttonNumPad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/nine" />
 
-    </TableRow>
+    </LinearLayout>
 
-
-    <TableRow
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/half_standard_margin"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btCustomNumPadDelete"
+        <ImageButton
+            android:id="@+id/ibCustomNumPadDelete"
             style="@style/buttonNumPad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/x"
-            android:textStyle="normal" />
+            android:layout_height="match_parent"
+            android:contentDescription="@string/clear"
+            android:src="@drawable/ic_clear_white_24dp"
+            android:visibility="invisible" />
 
         <Button
             android:id="@+id/btCustomNumPad0"
             style="@style/buttonNumPad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="@string/zero" />
 
-        <Button
-            android:id="@+id/btCustomNumPadBackspace"
+        <ImageButton
+            android:id="@+id/ibCustomNumPadBackspace"
             style="@style/buttonNumPad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/back"
-            android:textStyle="normal" />
+            android:contentDescription="@string/backspace"
+            android:src="@drawable/ic_backspace_white_24dp" />
 
-    </TableRow>
+    </LinearLayout>
 
-</TableLayout>
+</LinearLayout>
