--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -64,11 +64,11 @@
         <item name="android:foreground">?attr/selectableItemBackgroundBorderless</item>
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
-        <item name="android:elevation">4dp</item>
+        <item name="android:elevation">8dp</item>
         <item name="android:background">@drawable/button_rounded_corners_green</item>
         <item name="android:paddingTop">@dimen/standard_and_half_margin</item>
-        <item name="android:paddingStart">@dimen/double_and_half_standard_margin</item>
-        <item name="android:paddingEnd">@dimen/double_and_half_standard_margin</item>
+        <item name="android:paddingStart">@dimen/standard_and_half_margin</item>
+        <item name="android:paddingEnd">@dimen/standard_and_half_margin</item>
         <item name="android:paddingBottom">@dimen/standard_and_half_margin</item>
         <item name="android:layout_marginTop">@dimen/standard_and_half_margin</item>
         <item name="android:gravity">center</item>
@@ -77,11 +77,16 @@
         <item name="android:orientation">vertical</item>
     </style>
 
-    <style name="buttonNumPad" parent="Widget.AppCompat.Button.Borderless">
+    <style name="buttonNumPad">
         <item name="android:foreground">?attr/selectableItemBackgroundBorderless</item>
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
+        <item name="android:elevation">4dp</item>
+        <item name="android:backgroundTint">@color/colorPrimary</item>
+        <item name="android:layout_width">64dp</item>
+        <item name="android:layout_height">48dp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">20sp</item>
         <item name="android:layout_marginStart">@dimen/quarter_standard_margin</item>
         <item name="android:layout_marginEnd">@dimen/quarter_standard_margin</item>
